--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="main.js"></script>
+    <script src="main.js?v=2"></script>
   </body>
 </html>
